<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <EditText
        android:id="@+id/editSsid"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/ssid_hint"
        android:inputType="text" />    
    <EditText
        android:id="@+id/editPassphrase"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/passphrase_hint"
        android:inputType="textPassword" />
	<LinearLayout
		android:layout_width="fill_parent"
    	android:layout_height="wrap_content"
    	android:orientation="horizontal">
    	<Button
        	android:id="@+id/save"
        	android:layout_width="fill_parent"
        	android:layout_height="wrap_content"
        	android:layout_weight="1"
        	android:text="@string/save" />
    	<Button
	        android:id="@+id/cancel"
    	    android:layout_width="fill_parent"
        	android:layout_height="wrap_content"
        	android:layout_weight="1"
        	android:text="@string/cancel" />
	</LinearLayout>
</LinearLayout>